--- a/src/app/pages/shop-all/shop-all.component.css
+++ b/src/app/pages/shop-all/shop-all.component.css
@@ -1,62 +1,4 @@
 
-/*Cate-left*/
-/*.cate-name ul li{*/
-/*  margin-bottom:20px;*/
-/*}*/
-/*.cate-name ul li:nth-child(4){*/
-/*  margin-bottom:0px;*/
-/*}*/
-/*Care-left-card*/
-/*.categories-card{*/
-/*  position: relative;*/
-/*}*/
-/*.cate-card-name{*/
-/*  position: absolute;*/
-/*  top:50%;*/
-/*  display:none;*/
-/*}*/
-/*.categories-card:hover > .cate-card-name{*/
-/*  display: block;*/
-/*  transition: 0.4s all;*/
-/*}*/
-/*.cate-card-name a:hover{*/
-/*  color:#333;*/
-/*}*/
-/*.cate-de1 img{*/
-/*  max-height:20%;*/
-/*}*/
-/*.cate-name-all{*/
-/*  background-color: #e7e7e7;*/
-/*  padding-top:60px;*/
-/*  padding-bottom:60px;*/
-/*}*/
-/*.cate-name:hover > .cate-name-all{*/
-/*  background-color: #fff;*/
-/*}*/
-/*.cate-name-all a:hover{*/
-/*  text-decoration: underline;*/
-/*}*/
-
-/*Cate-center*/
-/*Cate-right*/
-/*.cate-right h3{*/
-/*  padding-top:80px;*/
-/*}*/
-/*!*ring*!*/
-/*.cate-all{*/
-/*  margin-top:120px;*/
-/*  margin-bottom:120px;*/
-/*}*/
-/*.cate-all h4{*/
-/*  margin-bottom:60px;*/
-/*}*/
-/*.click-to-all{*/
-/*  background-color: #e7e7e7;*/
-/*  padding-top:103px;*/
-/*  padding-bottom:103px;*/
-/*}*/
-/*Earring*/
-
 /*ALL CATEFORIES*/
 /*LEFT*/
 .ctg .ctg-inner .ctg-left{
@@ -84,20 +26,7 @@
   padding-right:0 !important;
   padding-left:5px !important;
 }
-.ctg-right .right-top img{
 
-}
-
-
-/*To show all*/
-/*.to-show-all{*/
-/*  position:absolute;*/
-/*}*/
-/*.all-name{*/
-/*  position:absolute;*/
-/*  top:50%;*/
-/*  width:100%;*/
-/*}*/
 .collec-top{
   margin-bottom:100px;
   margin-top:120px;
@@ -149,4 +78,13 @@
 }
 .collec-img:hover img{
   transform: scale(1.1);
+}
+.right-btm{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 295px;
+}
+.right-btm img{
+  max-height: 285px;
 }
