--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
             <!--search-button-start-->
             <div class="search-box">
                 <input type="text" placeholder="search...">
-                <a routerLink="#" class="iconsearch">
+                <a routerLink="/search" class="iconsearch">
                   <i class="fa fa-search fa-lg"></i>
                 </a>
             </div>
@@ -113,25 +113,25 @@
       <div class="col-2">
         <ul>
           <li><p class="mdt">Explore</p></li>
-          <li>Home</li>
-          <li>About Us</li>
+          <li class="mb-1">Home</li>
+          <li class="mb-1">About Us</li>
           <li>Jewellery Guide</li>
         </ul>
       </div>
       <div class="col-2">
         <ul>
           <li><p class="mdt">Jewellery</p></li>
-          <li>Rings</li>
-          <li>Earrings</li>
-          <li>Bracelets</li>
+          <li class="mb-1">Rings</li>
+          <li class="mb-1">Earrings</li>
+          <li class="mb-1">Bracelets</li>
           <li>Necklaces</li>
         </ul>
       </div>
       <div class="col-2">
         <ul>
           <li><p class="mdt">More</p></li>
-          <li>Size guide</li>
-          <li>Shipping & Returns</li>
+          <li class="mb-1">Size guide</li>
+          <li class="mb-1">Shipping & Returns</li>
           <li>Product care & Repair</li>
         </ul>
       </div>
