--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -227,7 +227,7 @@
         <p class="smt mt-40">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
           With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
           as many of our past customers have had great experiences working with them.</p>
-        <button class="btn btnlg btn-sec w-50" onclick="alert('Loading...')">Read more</button>
+        <button class="btn btnlg btn-pri w-50" onclick="alert('Loading...')">Read more</button>
       </div>
     </div>
     <div class="col-2"></div>
