--- a/src/app/pages/guide/guide.component.css
+++ b/src/app/pages/guide/guide.component.css
@@ -1,9 +1,16 @@
-/*insurance*/
-.insurance{
-  background-color: #E8CEAB;
+/*care*/
+.care{
+  background-color: #E1DCD6;
   padding-top:60px;
   padding-bottom:60px;
   margin-top:120px;
+}
+.care-content{
+  padding:0 80px;
+}
+.type-j{
+  text-decoration: underline;
+  font-weight: 500;
 }
 /*JEWELLERY TYPE*/
 .content{
@@ -15,19 +22,10 @@
   transform: translateY(-50%);
 }
 /*natural-jewelery*/
-.natural-j{
-  position:relative;
-}
-.natural-j-content{
-  position: absolute;
-  right:0px;
-
-}
 .natural-inner{
-  margin-top:50px;
-  padding: 20px 50px;
-  background-color: rgb(255,255,255,0.75);
-
+  position: absolute;
+  top:50%;
+  transform: translateY(-50%);
 }
 
 /*jewellery-care*/
@@ -51,4 +49,17 @@
 .card{
   background-color:#faf8f6;
   border:none;
+}
+.we{
+  padding-top:60px;
+}
+.we .line2{
+  max-width: 50%;
+  height:1px;
+  margin: auto;
+  background-color:#333;
+}
+.we-content{
+  padding-top:30px;
+  color:#333;
 }
