track and thank

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -7,10 +7,10 @@
         <h5 class="">Introduction</h5>
       </div>
       <div class="dear-content col-8">
-        <p class="smt">AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
+        <p class="">AGURI is crafting the next generation of heirloom pieces. Each one is designed to transition seamlessly
           from one wearer to the next and complement each individual’s style in a unique way.
         </p>
-        <p class="smt">Designed and produced in New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
+        <p class="">Designed and produced in New York City, AGURI’s small team of expert jewelers utilizes recycled precious metals and reclaimed or
           ethically mined gemstones in each piece, sparking new life into materials that may otherwise be obsolete.
           Precious metals and reclaimed or ethically mined gemstones in each piece, sparking new life into materials
           that may otherwise be obsolete reclaimed or ethically.</p>
