--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,108 +1,62 @@
-
-<!--  &lt;!&ndash;BANNER&ndash;&gt;-->
-<!--  <link rel="stylesheet" href="../home/home.component.css">-->
-<!--  <div class="banner-img">-->
-<!--    <div class="">-->
-<!--      <img src="./assets/img/contact/banner.png">-->
-<!--    </div>-->
-<!--    <div class="banner-img-text">-->
-<!--      <h3 class="text-center">Get In Touch With Us</h3>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  &lt;!&ndash;contact form here&ndash;&gt;-->
-<!--  <div class="container contact-form">-->
-<!--    <div class="contact-inner">-->
-<!--      <div class="row">-->
-<!--        <div class="col"></div>-->
-<!--        <div class="col-6 contact-form">-->
-<!--          <form onsubmit="alert('Thank you for your message!! We will contact you soon.')">-->
-<!--            <div class="row name-user">-->
-<!--              <div class="col-6 firstname ps-0">-->
-<!--                <label>First name</label>-->
-<!--                <input class="inpu" type="text">-->
-<!--              </div>-->
-<!--              <div class="col-6 lastname pe-0">-->
-<!--                <label>Last name</label>-->
-<!--                <input class="inpu" type="text">-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="email-user user-input">-->
-<!--              <label>Email address (*)</label>-->
-<!--              <input class="inpu" type="email" required><br>-->
-<!--            </div>-->
-<!--            <div class="subj-user user-input">-->
-<!--              <label>Subject</label>-->
-<!--              <input class="inpu" type="text"><br>-->
-<!--            </div>-->
-<!--            <div class="mess-user">-->
-<!--              <label>Message (*)</label>-->
-<!--              <textarea class="inpu" rows="4" required></textarea>-->
-<!--            </div>-->
-<!--            <div class="text-center">-->
-<!--              <button class="d-inline-block btn btn-pri btlg" type="submit">Send it</button>-->
-<!--            </div>-->
-<!--          </form>-->
-<!--        </div>-->
-<!--        <div class="col-4 contact-text">-->
-<!--          <h6>Drop us a line</h6>-->
-<!--          <p class="smt">For questions regarding our products and services you can also contact us by filling out the form below.</p>-->
-<!--          <p class="decor-text mail-info">info@AGURI&PIJ2022.com for appointment</p>-->
-<!--        </div>-->
-<!--        <div class="col"></div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  &lt;!&ndash;  &ndash;&gt;-->
-<!--  <div class="container">-->
-<!--    <div>-->
-<!--      <h5>We're so glad to see you</h5>-->
-<!--      <p>There are a lot of ways to stay in touch with us</p>-->
-<!--    </div>-->
-<!--    <div class="row">-->
-<!--      <div class="col-6 ps-0">-->
-<!--        <p>Let's say hello on social media</p>-->
-
-<!--      </div>-->
-<!--      <div class="col-6 pe-0">-->
-<!--        <p>Call us via telephone</p>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--  &lt;!&ndash;Map here&ndash;&gt;-->
-<!--  <div class="aguri-info">-->
-<!--      <div >-->
-<!--        <h5 class="text-center mb-3">Our Showrooms</h5>-->
-<!--      </div>-->
-<!--        &lt;!&ndash;carousel-maps&ndash;&gt;-->
-<!--        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">-->
-<!--            <div class="carousel-indicators">-->
-<!--              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>-->
-<!--              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>-->
-<!--            </div>-->
-<!--            <div class="carousel-inner">-->
-<!--              <div class="carousel-item active" data-bs-interval="3000">-->
-<!--                <p class="text-center">-->
-<!--                  <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States-->
-<!--                </p>-->
-<!--                <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>-->
-<!--              </div>-->
-<!--              <div class="carousel-item" data-bs-interval="3000">-->
-<!--                <p class="text-center">-->
-<!--                  <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom-->
-<!--                </p>-->
-<!--                <agm-map [latitude]=51.507406 [longitude]=-0.125283 [zoom]=10></agm-map>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">-->
-<!--              <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--              <span class="visually-hidden">Previous</span>-->
-<!--            </button>-->
-<!--            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">-->
-<!--              <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--              <span class="visually-hidden">Next</span>-->
-<!--            </button>-->
-<!--          </div>-->
-<!--  </div>-->
-
-
-
+<!--BANNER-->
+<div class="banner-img">
+  <div class="">
+    <img src="./assets/img/contact/banner.png">
+  </div>
+  <div class="banner-img-text">
+    <h3 class="text-center">Get In Touch With Us</h3>
+  </div>
+</div>
+<!--contact form here-->
+<div class="container contact-form">
+  <div class="contact-inner">
+    <div class="row">
+      <div class="col"></div>
+      <div class="col-6 contact-form">
+        <form ngNativeValidate onsubmit="alert('Thank you for your message!! We will contact you soon.')">
+          <div class="row name-user">
+            <div class="col-6 firstname ps-0">
+              <label>First name</label>
+              <input class="inpu" type="text">
+            </div>
+            <div class="col-6 lastname pe-0">
+              <label>Last name</label>
+              <input class="inpu" type="text">
+            </div>
+          </div>
+          <div class="email-user user-input">
+            <label>Email address (*)</label>
+            <input class="inpu" type="email" required><br>
+          </div>
+          <div class="subj-user user-input">
+            <label>Subject</label>
+            <input class="inpu" type="text"><br>
+          </div>
+          <div class="mess-user">
+            <label>Message (*)</label>
+            <textarea class="inpu" rows="4" required></textarea>
+          </div>
+          <div class="text-center">
+            <button class="d-inline-block btn btn-pri btlg" type="submit">Send it</button>
+          </div>
+        </form>
+      </div>
+      <div class="col-4 contact-text">
+        <h6>Drop us a line</h6>
+        <p class="smt">For questions regarding our products and services you can also contact us by filling out the form below.</p>
+        <p class="decor-text mail-info">info@AGURI&PIJ2022.com for appointment</p>
+      </div>
+      <div class="col"></div>
+    </div>
+  </div>
+</div>
+<!--Map here-->
+<div class="aguri-info">
+  <div class="text-center">
+    <h5 class="mb-2">Come and visit us</h5>
+    <p class="smt mb-4"><i class="fas fa-map-marker-alt fa-lg"></i> 6901 Hollywood Blvd, LA, CA 90028, US</p>
+  </div>
+  <div class="mapp-here">
+    <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
+  </div>
+</div>
