--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -184,7 +184,7 @@
 
 /*experiences*/
 .experiences{
-  background-color: #E2CDB0;
+  background-color: #E1DCD6;
   padding-top:80px;
   padding-bottom:80px;
 }
