--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -778,8 +778,8 @@
                 <option value="3">5 1/2</option>
               </select>
             </div>
-            <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
-            <a href="">
+            <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
+            <a routerLink="/product-detail">
               <p>View more detail</p>
             </a>
           </div>
