--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -274,7 +274,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
@@ -288,7 +288,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
@@ -302,7 +302,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
@@ -320,7 +320,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
@@ -334,7 +334,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
@@ -348,7 +348,7 @@
                         </a>
                       </div>
                       <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                        Quick view
+                        Quick Compare
                       </div>
                     </div>
                   </div>
