--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,9 @@
   margin: 0px;
 }
 body{
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 400;
+  line-height: 21px;
   font-family: 'Inter', sans-serif;
   background-color: #FAF8F6;
 }
@@ -195,7 +196,7 @@ input{
   padding:0px;
 }
 nav a{
-  font-size:16px;
+  font-size:14px;
 }
 nav li{
   padding:10px 30px;
