--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -129,14 +129,19 @@
 
     <!--category-main-->
     <div class="category-main px-0 col-10">
-      <!--breadcrumb-->
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-          <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
-          <li class="breadcrumb-item active" aria-current="page"><a>Rings</a></li>
-        </ol>
-      </nav>
+      <div class="d-flex">
+        <!--breadcrumb-->
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+            <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
+            <li class="breadcrumb-item active" aria-current="page"><a>Rings</a></li>
+          </ol>
+        </nav>
+        <div class="filter-prd">
+          <p>Filter And Sort</p>
+        </div>
+      </div>
       <!--ALL PRODUCT HERE-->
       <div>
         <div class="row cate-product">
