--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -58,10 +58,10 @@
             <div class="row">
               <div class="col-3">
                 <ul>
-                  <li class="category"><a routerLink="">Rings</a></li>
-                  <li><a routerLink="">Eternity</a></li>
-                  <li><a routerLink="">Cocktail</a></li>
-                  <li><a routerLink="">Wedding</a></li>
+                  <li class="category"><a routerLink="/category/1">Rings</a></li>
+                  <li><a routerLink="/sub-category/1">Eternity</a></li>
+                  <li><a routerLink="/sub-category/1">Cocktail</a></li>
+                  <li><a routerLink="/sub-category/1">Wedding</a></li>
                 </ul>
               </div>
               <div class="col-3">
