--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -32,9 +32,9 @@
       <div class="col-5 content">
         <div class="content-inner">
           <p class="mdt my-3">How Lab-Grown Jewellery Are Formed</p>
-          <p class="mb-2 smt">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
+          <p class="mb-2">Lab-grown jewelery are real diamonds grown in man-made environments. Current technology can recreate conditions
             necessary for a diamond crystal to form, replicating the earth's natural process of diamond formation.</p>
-          <p class="smt">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
+          <p class="">There are two common methods for growing diamonds in a lab: High Pressure High Temperature (HPHT) and
             Chemical Vapor Deposition (CVD).An HPHT diamond starts as a small diamond seed that is placed into carbon.
             Exposed to about 1500 degrees Celsius and pressurized to approximately 1.5 million pounds per square inch,
             the pure carbon melts and begins to form around the starter seed. It is then carefully cooled to form a pure
@@ -52,10 +52,10 @@
         <div class="natural-d natural-inner">
           <h4 class="mb-4">About Natural Jewellery</h4>
           <p class="mdt my-3">How Earth-Created Jewelry Are Formed</p>
-          <p class="mb-2 smt">Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
+          <p class="mb-2">Diamonds are crystalline carbon atoms that formed under the earth’s surface over 3 billion years ago. To be
             more exact, they formed in the earth’s mantle about 90 miles below the surface under temperatures as high as
             2000° F and a pressure of 45-60 kilobars.</p>
-          <p class="smt">After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
+          <p class="">After their formations, diamonds reach the earth’s surface during extremely rare and not yet observed
             deep-source volcanic eruptions. Diamond is the only gemstone composed of a single element, as they are
             typically about 99.95% carbon. The other 0.05% can include one or more trace elements, which are atoms that
             aren’t part of a diamond’s essential chemistry. Some of them influence color.</p>
@@ -69,7 +69,7 @@
       <div class="col"></div>
       <div class="col-10 text-center">
         <h4 class="mb-3">Diamond Characteristics and the 4 Cs</h4>
-        <p class="smt">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
+        <p class="">Once the lab-grown or earth-created diamond is selected, the next step is to choose the quality of the diamond
           and the shape of its cut. Both types of diamonds are graded by gemological institutes following exactly the same
           process and are cut using exactly the same standards. To help guide your process, you can learn about diamond
           grading and certification, the 4 C’s, diamond shapes, and more, below.</p>
@@ -239,8 +239,8 @@
   <!--bottom-text-->
   <div class="we">
     <div class="line2"></div>
-    <h4 class="text-center we-content">AGURI is a fine jewelry destination for memorable pieces designed and crafted in
+    <h5 class="text-center we-content">AGURI is a fine jewelry destination for memorable pieces designed and crafted in
           New York City. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
-          production and genuine materials.</h4>
+          production and genuine materials.</h5>
   </div>
 </div>
