--- a/src/app/pages/category/category.component.css
+++ b/src/app/pages/category/category.component.css
@@ -80,3 +80,11 @@ div.sticky{
 .breadcrumb {
   padding-left: 12.5px;
 }
+.filter-prd{
+  margin-left:auto;
+  margin-right:12.5px
+}
+/*.filter-icon{*/
+/*  height: 17px;*/
+/*  margin-right:12.5px;*/
+/*}*/
