--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,159 +1,4 @@
-
-<!--Showcase-->
-<!--<div class="container">-->
-<!--  <div class="aguri-showcase mbt-120">-->
-<!--    <div class="row">-->
-<!--      <div class="col-6 showcase-main-img row">-->
-<!--        <div id="carousel-main" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">-->
-<!--          <div class="carousel-inner">-->
-<!--            <div class="carousel-item active" data-bs-interval="2000">-->
-<!--              <div class="col-10 showcase-img">-->
-<!--                <a routerlink="#">-->
-<!--                  <img src="./assets/img/home/showcase-b1.png">-->
-<!--                </a>-->
-<!--              </div>-->
-<!--              <div class="decor-showcase-slide">-->
-<!--                  <a class="round-button">-->
-<!--                    <i class="fa-solid fa-arrow-right fa-2x"></i>-->
-<!--                  </a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="col-10 showcase-img">-->
-<!--                <a routerlink="#">-->
-<!--                  <img src="./assets/img/home/showcase-b2.png">-->
-<!--                </a>-->
-<!--              </div>-->
-<!--              <div class="decor-showcase-slide">-->
-<!--                <a class="round-button">-->
-<!--                  <i class="fa-solid fa-arrow-right fa-2x"></i>-->
-<!--                </a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="col-10 showcase-img">-->
-<!--                <a routerlink="#">-->
-<!--                  <img src="./assets/img/home/showcase-b3.png">-->
-<!--                </a>-->
-<!--              </div>-->
-<!--              <div class="decor-showcase-slide">-->
-<!--                <a class="round-button">-->
-<!--                  <i class="fa-solid fa-arrow-right fa-2x"></i>-->
-<!--                </a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="col-10 showcase-img">-->
-<!--                <a routerlink="#">-->
-<!--                  <img src="./assets/img/home/showcase-b4.png">-->
-<!--                </a>-->
-<!--              </div>-->
-<!--              <div class="decor-showcase-slide">-->
-<!--                <a class="round-button">-->
-<!--                  <i class="fa-solid fa-arrow-right fa-2x"></i>-->
-<!--                </a>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="col-8 ps-0 showcase-content">-->
-<!--        <div class="showcase-title row">-->
-<!--          <div class="col-8 showcase-title-inner">-->
-<!--            <p class="decor-text mb-2">AGURI'S COLLECTION</p>-->
-<!--            <h4 class="mb-3">All Our Beautiful Collection</h4>-->
-<!--            <p class="smt">-->
-<!--              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus laoreet turpis dignissim condimentum. Lorem-->
-<!--              ipsum dolor sit amet, consectetur adipiscing elit.-->
-<!--            </p>-->
-<!--          </div>-->
-<!--          <div class="col-2"></div>-->
-<!--        </div>-->
-<!--        &lt;!&ndash;carousel-showcase-small-img&ndash;&gt;-->
-<!--        <div id="carousel-sub" class="carousel-dark carousel slide carousel-fade" data-bs-ride="carousel">-->
-<!--          <div class="carousel-inner">-->
-<!--            <div class="carousel-item active" data-bs-interval="2000">-->
-<!--              <div class="row">-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s1.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s2.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s3.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="row">-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s4.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s6.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s5.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="row">-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s3.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s4.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s6.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-bs-interval="2000">-->
-<!--              <div class="row">-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s5.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s3.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--                <div class="col-4">-->
-<!--                  <a routerlink="#">-->
-<!--                    <img src="./assets/img/home/showcase-s4.png">-->
-<!--                  </a>-->
-<!--                </div>-->
-<!--              </div>-->
-<!--            </div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<quick-view [quickviewed]="quickviewed"></quick-view>
 <div class="ctg">
   <div class="row ctg-inner">
     <div class="ctg-left col-8">
@@ -214,7 +59,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new1.png">
                         </a>
                       </div>
@@ -228,7 +73,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new2.png">
                         </a>
                       </div>
@@ -242,7 +87,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new3.png">
                         </a>
                       </div>
@@ -260,7 +105,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new4.png">
                         </a>
                       </div>
@@ -274,7 +119,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new5.png">
                         </a>
                       </div>
@@ -288,7 +133,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new6.png">
                         </a>
                       </div>
@@ -306,7 +151,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new7.png">
                         </a>
                       </div>
@@ -320,7 +165,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new8.png">
                         </a>
                       </div>
@@ -334,7 +179,7 @@
                   <div class="item-card-info">
                     <div class="card-prd">
                       <div class="img">
-                        <a href="#">
+                        <a routerlink="/product-detail">
                           <img src="./assets/img/home/new9.png">
                         </a>
                       </div>
@@ -727,66 +572,6 @@
       </button>
     </div>
   </div>
-  <!--Modal Quick view-->
-  <div class="modal fade" id="quickview">
-    <div class="modal-dialog modal-dialog-centered quickview">
-      <div class="modal-content">
-        <div class="row">
-          <div class="col-7 ps-0">
-            <!--Carousel quick view product-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                  <img src="./assets/img/product-detail/quickview1.png">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="./assets/img/product-detail/quickview2.png">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="./assets/img/product-detail/quickview3.png">
-                </div>
-                <div class="carousel-item">
-                  <img src="./assets/img/product-detail/quickview4.png">
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-5 pe-0">
-            <h5>Diamond Wire Ring</h5>
-            <h5 class="my-3">$7,000</h5>
-            <div class="d-flex">
-              <p class="mdt me-auto">Quantity</p>
-              <span class="buttons_added ml-1">
-                <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
-              </span>
-            </div>
-            <div class="line"></div>
-            <div class="quick-size my-3">
-              <select class="form-select smt">
-                <option selected>Select size</option>
-                <option value="1">3</option>
-                <option value="2">3 1/2</option>
-                <option value="3">4</option>
-                <option value="3">4 1/2</option>
-                <option value="3">5</option>
-                <option value="3">5 1/2</option>
-              </select>
-            </div>
-            <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
-            <a routerLink="/product-detail">
-              <p>View more detail</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <!--All about us-->
   <div class="about row mbt-120">
     <div class="col-2"></div>
@@ -913,7 +698,7 @@
 <!--GET INSPIRATION-->
 <div class="inspiration mbt-120">
   <h4 class="mb-2 text-center">Get Inspiration</h4>
-  <p class="smt mb-5 text-center">Tag us on your insta to get a chance for a feature</p>
+  <p class="smt mb-4 text-center">Tag us on your insta to get a chance for a feature</p>
   <div id="inspiration-carousel" class="carousel slide carousel-fade carousel-dark" data-bs-ride="carousel">
     <div class="carousel-inner container">
       <div class="carousel-item active" data-bs-interval="2000">
