--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,3 +1,4 @@
+<quick-view [quickviewed]="quickviewed"></quick-view>
 <!--Product detail-->
 <div class="container">
   <!--DETAIL-->
@@ -43,9 +44,13 @@
         <div class="line mb-3"></div>
         <div class=d-flex>
           <p class="mdt me-auto">Quantity</p>
-          <span class="buttons_added ml-1">
-            <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
-          </span>
+          <div class="quantity">
+            <form id='myform' method='POST' class='quantity' action='#'>
+              <i class="fa-solid fa-minus"></i>
+              <input type='text' name='quantity' value='1' class='qty' />
+              <i class="fa-solid fa-plus"></i>
+            </form>
+          </div>
         </div>
         <div class="line mb-3"></div>
         <div class=d-flex>
@@ -146,9 +151,9 @@
           </div>
         </div>
         <div class="bag">
-          <button class="add-bag btn btnlg btn-pri w-100" type="submit" data-bs-toggle="offcanvas" data-bs-target="#addbag">Add to bag</button>
+          <button class="add-bag btn btnlg btn-pri w-100" type="submit" data-bs-toggle="offcanvas" data-bs-target="#addbag2">Add to bag</button>
           <!--OFFCANVSS ADD BAG-->
-          <div class="offcanvas offcanvas-end" id="addbag">
+          <div class="offcanvas offcanvas-end" id="addbag2">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title mt-3">Shopping Bag</h5>
               <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -160,12 +165,14 @@
                     <img src="assets/img/product-detail/add-product1.png">
                   </a>
                 </div>
-                <div class="col-6">
-                  <p>Amel Earring</p>
-                </div>
-                <div class="col-2 pe-0">
-                  <i class="fa-solid fa-xmark"></i>
-                  <p>$5,000</p>
+                <div class="col-8">
+                  <div class="d-flex prd-title">
+                    <p class="prd-name">Amel Earring</p>
+                    <i class="fa-solid fa-xmark mb-auto"></i>
+                  </div>
+                  <div class="pe-0 prd-prc">
+                    <p>$5,000</p>
+                  </div>
                 </div>
               </div>
               <div class="line mb-3"></div>
@@ -175,12 +182,14 @@
                     <img src="assets/img/product-detail/add-product2.png">
                   </a>
                 </div>
-                <div class="col-6">
-                  <p>Diamons And Gold Spark Ring</p>
-                </div>
-                <div class="col-2 pe-0">
-                  <i class="fa-solid fa-xmark"></i>
-                  <p>$6,700</p>
+                <div class="col-8">
+                  <div class="d-flex prd-title">
+                    <p class="prd-name">Diamons And Gold Spark Ring</p>
+                    <i class="fa-solid fa-xmark mb-auto"></i>
+                  </div>
+                  <div class="prd-prc">
+                    <p>$6,700</p>
+                  </div>
                 </div>
               </div>
               <div class="line mb-3"></div>
@@ -188,7 +197,14 @@
                 <p class="mdt me-auto">Product Total</p>
                 <p class="mdt">$11,700</p>
               </div>
-              <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/order-detail">Continue</button>
+              <div class="row offcanvas-btn">
+                <div class="col-6 offcanvas-checkbox">
+                  <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
+                </div>
+                <div class="col-6 offcanvas-cart">
+                  <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/cart">Continue</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -378,15 +394,15 @@
               </div>
             </div>
             <div class="jewel">
-              <p class="mdt">Jewellery</p>
+              <p class="">Jewellery</p>
               <p class="smt my-2">NaturalJewelry</p>
               <p class="smt mb-0">Round brilliant diamonds</p>
               <p class="smt my-2">4mm width</p>
               <p class="smt">Carat total weight .48</p>
             </div>
-            <div class="line"></div>
+            <div class="line mb-2"></div>
             <div class="mater">
-              <p class="mdt">Material</p>
+              <p class="">Material</p>
               <p class="smt">16k White gold</p>
             </div>
             <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
@@ -402,15 +418,15 @@
               </div>
             </div>
             <div class="jewel">
-              <p class="mdt">Jewellery</p>
+              <p class="">Jewellery</p>
               <p class="smt my-2">Natural & Lab-grown Jewelry</p>
               <p class="smt mb-0">Pear brilliant diamonds</p>
               <p class="smt my-2">2.5mm width x2</p>
               <p class="smt">Carat total weight .50</p>
             </div>
-            <div class="line"></div>
+            <div class="line mb-2"></div>
             <div class="mater">
-              <p class="mdt">Material</p>
+              <p class="">Material</p>
               <p class="smt">18k Rose gold</p>
             </div>
             <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
@@ -665,89 +681,26 @@
     </button>
   </div>
 </div>
-
-<!--Modal Quick view-->
-<div class="modal fade " id="quickview">
-  <div class="modal-dialog modal-dialog-centered quickview">
-    <div class="modal-content">
-      <div class="row">
-        <div class="col-7 ps-0">
-          <!--Carousel quick view product-->
-          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active" data-bs-interval="5000">
-                <img src="./assets/img/product-detail/quickview1.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview2.png">
-              </div>
-              <div class="carousel-item" data-bs-interval="3000">
-                <img src="./assets/img/product-detail/quickview3.png">
-              </div>
-              <div class="carousel-item">
-                <img src="./assets/img/product-detail/quickview4.png">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-5 pe-0">
-          <h5>Diamond Wire Ring</h5>
-          <h5 class="my-3">$7,000</h5>
-          <div class="d-flex">
-            <p class="mdt me-auto">Quantity</p>
-            <span class="buttons_added ml-1">
-                <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="">
-              </span>
-          </div>
-          <div class="line"></div>
-          <div class="quick-size my-3">
-            <select class="form-select smt">
-              <option selected>Select size</option>
-              <option value="1">3</option>
-              <option value="2">3 1/2</option>
-              <option value="3">4</option>
-              <option value="3">4 1/2</option>
-              <option value="3">5</option>
-              <option value="3">5 1/2</option>
-            </select>
-          </div>
-          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
-          <a href="">
-            <p>View more detail</p>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <!--REVIEW-->
 <div class="review container">
   <div class="d-flex review-start">
     <h3>4,9</h3>
-    <div class="d-flex my-auto">
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
-      <i class="fa-solid fa-star fa-xl"></i>
+    <div class="d-flex mx-3 my-auto">
+      <i class="fa-solid fa-star fa-xl pr-1"></i>
+      <i class="fa-solid fa-star fa-xl pr-1"></i>
+      <i class="fa-solid fa-star fa-xl pr-1"></i>
+      <i class="fa-solid fa-star fa-xl pr-1"></i>
       <i class="fa-solid fa-star fa-xl"></i>
     </div>
     <p class="mdt my-auto">16 Reviews</p>
   </div>
-  <div class="row">
-    <div class="col-2">
+  <div class="d-flex">
+    <div class="mr-auto">
       <h5>Reviews</h5>
     </div>
-    <div class="col-8"></div>
-    <div class="col-2">
+    <div class="">
       <button class="advisor btn btnlg btn-pri w-100" data-bs-toggle="modal" type="button" data-bs-target="#review">Write a review</button>
-      <!-- Modal -->
+      <!-- Modal review -->
       <div class="modal fade" id="review">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
@@ -777,12 +730,11 @@
     </div>
   </div>
   <div class="line my-3"></div>
-  <div class="row select-review">
-    <div class="col-3">
+  <div class="d-flex select-review">
+    <div class="mr-auto">
       <h6>16 Reviews</h6>
     </div>
-    <div class="col-7"></div>
-    <div class="col-2">
+    <div class="">
       <select class="form-select smt w-100">
         <option selected>Sort by: Newest</option>
         <option value="1">Highest Rating</option>
