--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,10 @@
   margin: 0px;
 }
 body{
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
-  line-height: 21px;
-  font-family: 'Inter', sans-serif;
+  line-height: 23px;
+  font-family: 'Futura PT', sans-serif;
   background-color: #FAF8F6;
 }
 ul {
@@ -72,15 +72,20 @@ h2, h3, h4, h5 {
   font-family: 'Merchant', sans-serif;
   font-weight: 400;
 }
+h6{
+  font-family: 'Futura PT', sans-serif;
+  font-size:22px;
+  font-weight: 400;
+}
 .mdt{
   font-size:16px;
   font-weight: 500;
 }
 .smt{
-  font-size: 12px;
+  font-size: 14px;
 }
 .decor-text{
-  font-size:12px;
+  font-size:14px;
   font-weight: 400;
 }
 
@@ -154,8 +159,8 @@ label{
   padding:0px;
 }
 .header-inner{
-  padding-top:25px;
-  padding-bottom:25px;
+  padding-top:20px;
+  padding-bottom:20px;
 }
 /*search-box*/
 .search-box{
@@ -237,7 +242,7 @@ nav li:nth-child(1){
 }
 .dropdown-content .category {
   background-color: #e7e7e7;
-  font-weight: bolder;
+  font-weight: 500;
 }
 .dropdown-content li {
   padding: 20px 0px;
@@ -478,4 +483,15 @@ body{
     max-width: 1200px !important;
   }
 }
-
+/*quantity*/
+#myform {
+  text-align: center;
+  padding: 5px;
+  margin: 2%;
+  width: 100%;
+}
+.qty {
+  width: 40px;
+  height: 20px;
+  text-align: center;
+}
