--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -293,7 +293,7 @@
     <div class="row all-bottom">
       <div class="col-4 bottom-content">
         <div class="bottom-content-inner">
-          <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes. For individuals of all genders that.</p>
+          <p class="text-right decor-text mb-0">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic silhouettes.</p>
         </div>
       </div>
       <div class="col-4">
